# xhc

./: .gitignore  pyproject.toml
xhc/: main.py  test.py
xhc/terminal/: term.py  term_manager.py  term_manager_base.py
xhc/websocket/: connection.py
xhc_front/: package-lock.json  package.json  tsconfig.json
xhc_front/app/: globals.css  page.tsx
xhc_front/app/admin/: layout.tsx  page.tsx
xhc_front/app/admin/_common/: useSocketSubscribe.tsx
xhc_front/app/admin/_components/: PageHeader.tsx
xhc_front/app/admin/computers/: page.tsx
xhc_front/app/admin/computers/[id]/terminal/: page.tsx
xhc_front/app/shopping/: layout.tsx  page.tsx
xhc_front/app/shopping/_components/: Navbar.tsx  ProductCard.tsx  ProductCartCheckout.tsx  Products.tsx
xhc_front/app/shopping/_providers/: CartContext.tsx  CartReducert.tsx
xhc_front/components/: Navbar.tsx  Terminal.tsx
